--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:4FYZlDwoI6vfSXftoOZc@containers-us-west-56.railway.app:5620/railway
+spring.datasource.url=jdbc:mysql://root:4FYZlDwoI6vfSXftoOZc@containers-us-west-56.railway.app:5620/railway?serverTimezone=UTC 
 spring.datasource.dbname=railway
 spring.datasource.username=root
 spring.datasource.password=4FYZlDwoI6vfSXftoOZc
